third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/duplicate-keys-3.stderr
TOML parse error at line 2, column 1
  |
2 | "spelling" = "favourite"
  | ^
duplicate key `spelling` in document root
